# picodrone

./: .gitignore  README.md
app/: main.py
firmware/: CMakeLists.txt  FreeRTOSConfig.h  main.c
firmware/lib/bluetooth/: bt.c  bt.h  task.c
firmware/lib/control/: control.c  control.h
firmware/lib/mpu6050/: mpu.c  mpu.h
firmware/src/: main.c
hardware/footprints/nmos_SI2302CDS-T1-E3/: 2023-07-12_17-02-15.kicad_sym
hardware/footprints/nmos_SI2302CDS-T1-E3/footprints.pretty/: TO-236_VIS.kicad_mod
hardware/footprints/schottky_DSS16UTR/: DSS16UTR.kicad_sym  SODFL3618X110N.kicad_mod
hardware/gerber/: picodrone_controller-B_Cu.gbr  picodrone_controller-B_Mask.gbr  picodrone_controller-B_Paste.gbr  picodrone_controller-B_Silkscreen.gbr  picodrone_controller-Edge_Cuts.gbr  picodrone_controller-F_Cu.gbr  picodrone_controller-F_Mask.gbr  picodrone_controller-F_Paste.gbr  picodrone_controller-F_Silkscreen.gbr  picodrone_controller-NPTH.drl  picodrone_controller-PTH.drl
hardware/picodrone_controller/: fp-info-cache  fp-lib-table  picodrone_controller.kicad_pcb  picodrone_controller.kicad_prl  picodrone_controller.kicad_pro  picodrone_controller.kicad_sch  sym-lib-table  ~picodrone_controller.kicad_pcb.lck
